--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,11 @@
 [submodule "themes/sanskrit-documentation-theme-hugo"]
 	path = themes/sanskrit-documentation-theme-hugo
 	url = https://github.com/sanskrit-coders/sanskrit-documentation-theme-hugo.git
+[submodule "content"]
+	path = content
+	url = https://github.com/vishvAsa/vedAH_Rk
+	branch = content
+[submodule "static"]
+	path = static
+	url = https://github.com/vishvAsa/vedAH_Rk
+	branch = static_files
