--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,6 @@
 baseURL = "https://vishvAsa.github.io/vedAH_Rk/"
 languageCode = "en-us"
-title = "वेदे विश्वासटिप्पन्यः"
+title = "ऋग्वेदे विश्वासटिप्पन्यः"
 theme = "sanskrit-documentation-theme-hugo"
 publishDir = "build_github"
 disablePathToLower = true
