--- a/config_dev.toml
+++ b/config_dev.toml
@@ -1,6 +1,6 @@
 baseURL = "https://vishvAsa.github.io/vedAH_Rk/"
 languageCode = "en-us"
-title = "वेदे विश्वासटिप्पन्यः"
+title = "ऋग्वेदे विश्वासटिप्पन्यः"
 theme = "sanskrit-documentation-theme-hugo"
 publishDir = "build_github"
 disablePathToLower = true
@@ -36,10 +36,10 @@ disablePathToLower = true
 [module]
 
   [[module.mounts]]
-    source = "../vedAH-content"
+    source = "../vedAH_Rk-content"
     target = "content"
 
   [[module.mounts]]
-    source = "../vedAH-static"
+    source = "../vedAH_Rk-static"
     target = "static"
 
