--- a/data/sidebars/home_sidebar.yml
+++ b/data/sidebars/home_sidebar.yml
@@ -18,7 +18,7 @@ contents:
       - title: Notes Home
         url: ../notes/
       - title: वेदाः
-        url: ../vedAH_Rk/
+        url: ../vedAH/
       - title: पुराणम्
         url: ../purANam/
       - title: काव्यम्
