--- a/config.toml
+++ b/config.toml
@@ -12,7 +12,7 @@ disablePathToLower = true
   build_url = "https://github.com/vishvAsa/vedAH_Rk/actions/workflows/build.yml"
   fullSearchURL = "/full_search"
   env = "production"
-  disqusShortcode = "vvasuki-site"
+  # disqusShortcode = "vvasuki-site"
 
 [outputs]
   home = ["HTML", "RSS", "JSON", "CSV"]
