--- a/config_dev.toml
+++ b/config_dev.toml
@@ -10,7 +10,7 @@ disablePathToLower = true
   contactLink = "https://github.com/vishvAsa/vedAH_Rk/issues/new"
   fullSearchURL = "/full_search"
   env = "production"
-  disqusShortcode = "vvasuki-site"
+  # disqusShortcode = "vvasuki-site"
 
 [outputs]
   home = ["HTML", "RSS", "JSON", "CSV"]
