--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -104,4 +104,5 @@ jobs:
             owner: context.repo.owner,
             repo: context.repo.repo,
             workflow_id: 'index_pages.yml',
+            ref: 'content',
           })
